Fixing job page layout issues

--- a/jobs/scss/jobs.scss
+++ b/jobs/scss/jobs.scss
@@ -11,7 +11,7 @@
     overflow: hidden;
 }
 
-.row .jumbotron {
+.jumbotron {
     background-color: #2A4E68;
     width: 100%;
     border-radius: 0;
